info/test.log
2025.12.14 00:02:37

> Task :clean

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///home/olek/Projekty/zajecia/io/gold_rush_test_students/build/reports/problems/problems-report.html
2 actionable tasks: 2 executedWARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by net.rubygrapefruit.platform.internal.NativeLibraryLoader in an unnamed module (file:/home/olek/.gradle/wrapper/dists/gradle-8.14-bin/38aieal9i53h9rfe7vjup95b9/gradle-8.14/lib/native-platform-0.22-milestone-28.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled

/home/olek/Dokumenty/Uczelnia/Zajecia/io/2025_26/repos/n/Bendkowska_Joanna/src/main/java/edu/io/token/SluiceboxToken.java:12: error: cannot find symbol
        super(Label.SLUICEBOX_TOKEN_LABEL);
                   ^
  symbol:   variable SLUICEBOX_TOKEN_LABEL
  location: class Label
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /home/olek/Dokumenty/Uczelnia/Zajecia/io/2025_26/repos/n/Bendkowska_Joanna/src/main/java/edu/io/token/SluiceboxToken.java:12: error: cannot find symbol
          super(Label.SLUICEBOX_TOKEN_LABEL);
                     ^
    symbol:   variable SLUICEBOX_TOKEN_LABEL
    location: class Label
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 591ms
[STDERR]
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by net.rubygrapefruit.platform.internal.NativeLibraryLoader in an unnamed module (file:/home/olek/.gradle/wrapper/dists/gradle-8.14-bin/38aieal9i53h9rfe7vjup95b9/gradle-8.14/lib/native-platform-0.22-milestone-28.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled

/home/olek/Dokumenty/Uczelnia/Zajecia/io/2025_26/repos/n/Bendkowska_Joanna/src/main/java/edu/io/token/SluiceboxToken.java:12: error: cannot find symbol
        super(Label.SLUICEBOX_TOKEN_LABEL);
                   ^
  symbol:   variable SLUICEBOX_TOKEN_LABEL
  location: class Label
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /home/olek/Dokumenty/Uczelnia/Zajecia/io/2025_26/repos/n/Bendkowska_Joanna/src/main/java/edu/io/token/SluiceboxToken.java:12: error: cannot find symbol
          super(Label.SLUICEBOX_TOKEN_LABEL);
                     ^
    symbol:   variable SLUICEBOX_TOKEN_LABEL
    location: class Label
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 591ms